# Backpropagation

./: README.md  pyproject.toml
backpropagation/: __main__.py  activation.py  loss.py  nn.py
