[tool.poetry]
name = "backpropagation"
version = "0.1.0"
description = ""
authors = ["RenoirTan <renoirtan2005@gmail.com>"]
#readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.2"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
